--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies":{
         "express":"3.0.0beta6",
+        "express-namespace":"*"
         "jade":"*",
         "coffee-script":"*",
         "connect-assets":"*"
