--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     },
     "dependencies":{
         "express":"3.0.0beta6",
-        "express-namespace":"*"
+        "express-namespace":"*",
         "jade":"*",
         "coffee-script":"*",
-        "connect-assets":"*"
+        "connect-assets":"*",
+        "tingodb":"*",
+        "passport":"*",
+        "passport-local":"*"
     }
 }
